# shalosh

./: .gitignore  README.md  demo.ipynb  engine.py  pyproject.toml  test_engine.py
.claude/: settings.local.json
shalosh/: __init__.py  engine.py
