[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "shalosh"
version = "0.1.0"
description = "Three-valued rule evaluation and provenance tracking"
authors = [{ name = "Maul Bogat" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]
