[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shalosh"
version = "0.1.0"
description = "Three-valued rule evaluation and provenance tracking"
authors = [{ name = "Roy Maulbogat", email = "maulbogat@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]
